syntax = "proto3";
package service;

message Empty {}

message Identifier {
	string value = 1;
}

message Document {
	Identifier identifier = 1;
	string content = 2;
}

message DocumentStoreReuest {
	Document document = 1;
}

message DocumentGetReuest {
	Identifier identifier =1;
}

message DocumentGetResponse {
	Document document =1;
}

service Documents {
  	rpc Store (DocumentStoreReuest) returns (Empty);
	rpc Get (DocumentGetReuest) returns (DocumentGetResponse);
}
